css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

* {
	padding: 0px;
	margin: 0px;
	font-family: Open Sans;
	font-weight: bold;
}

#title {
	font-size: 30px;
	color: darksalmon;
}

.main-container {
	background-image: url("/images/morning.jpg");
	background-size:cover;
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
	width: 100vw;
	height: 100vh;
}

.card {
	padding: 50px;
	gap: 50px;
	width: clamp(500px, 50%, 100%);
	height: clamp(auto, 50%, 100%);
	display: flex;
	flex-flow: column wrap;
	justify-content: space-between;
	align-items: space-between;
	border-radius: 12px;
	box-shadow: 
		0 2.8px 2.2px rgba(0, 0, 0, 0.034),
		0 6.7px 5.3px rgba(0, 0, 0, 0.048),
		0 12.5px 10px rgba(0, 0, 0, 0.06),
		0 22.3px 17.9px rgba(0, 0, 0, 0.072),
		0 41.8px 33.4px rgba(0, 0, 0, 0.086),
		0 100px 80px rgba(0, 0, 0, 0.12);
	font-size: 75px;
	background-color: bisque;
	text-align: center;
}

